--- a/my-react-app/index.html
+++ b/my-react-app/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-    <script src="/mauiapp/hybridwebview.js"></script>
-    <script src="/mauiapp/mauiapp.js"></script>
+    <title>Vite + React + TS (<%- BUILD_TYPE %>)</title>
+    <%- HYBRIDWEBVIEW_SCRIPT %>
+    <%- MAUIAPP_SCRIPT %>
 </head>
 <body>
     <div id="root"></div>
